@@ -1,3 +1,7 @@
+2011-11-19  Andreas Kirschbaum
+
+	* Add text message logger. See doc/features.html for details.
+
 2011-11-16  Andreas Kirschbaum
 
 	* Implement /again command to repeat the previously entered
